chore(kotlin): bump binding version (#74)
* refactor

Signed-off-by: Yuhang Shi <clszzyh@gmail.com>

* refactor

Signed-off-by: Yuhang Shi <clszzyh@gmail.com>

* refactor

Signed-off-by: Yuhang Shi <clszzyh@gmail.com>

* 19 -> 11

Signed-off-by: Yuhang Shi <clszzyh@gmail.com>

---------

Signed-off-by: Yuhang Shi <clszzyh@gmail.com>