@@ -9,6 +9,7 @@ import flappy.functions.FlappySynthesizedFunction;
 import flappy.llms.ChatGPT;
 import io.github.cdimascio.dotenv.Dotenv;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
@@ -30,14 +31,14 @@ public class Law {
     LawMetaArguments.class,
     LawMetaReturn.class
   );
-
+  
   public static void main(String[] args) throws ExecutionException, InterruptedException {
     Dotenv dotenv = Dotenv.load();
     ChatGPT llm = new ChatGPT("gpt-3.5-turbo", new ChatGPT.ChatGPTConfig(dotenv.get("OPENAI_TOKEN"), dotenv.get("OPENAI_API_BASE")));
 
 
     FlappyBaseAgent lawAgent = new FlappyBaseAgent(
-      llm, List.of(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
+      llm, Arrays.asList(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
     );
 
 
