@@ -5,7 +5,7 @@ import flappy.LLMResponse;
 import flappy.llms.Dummy;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 
@@ -19,45 +19,41 @@ public class LawTestJava {
       switch (source) {
         case FlappyBaseAgent.AGENT_SOURCE:
           return new LLMResponse.Success(
-            """
-              [
-                {
-                  "id": 1,
-                  "functionName": "getLatestLawsuitsByPlaintiff",
-                  "args": {
-                    "plaintiff": "families of victims",
-                    "arg1": false
-                  },
-                  "thought": "Get the latest lawsuits where the plaintiff is families of victims."
-                },
-                {
-                  "id": 2,
-                  "functionName": "getMeta",
-                  "args": {
-                    "lawsuit": "%@_1"
-                  },
-                  "thought": "Extract metadata from the lawsuit."
-                }
-              ]
-                """);
+            "[\n" +
+            "  {\n" +
+            "    \"id\": 1,\n" +
+            "    \"functionName\": \"getLatestLawsuitsByPlaintiff\",\n" +
+            "    \"args\": {\n" +
+            "      \"plaintiff\": \"families of victims\",\n" +
+            "      \"arg1\": false\n" +
+            "    },\n" +
+            "    \"thought\": \"Get the latest lawsuits where the plaintiff is families of victims.\"\n" +
+            "  },\n" +
+            "  {\n" +
+            "    \"id\": 2,\n" +
+            "    \"functionName\": \"getMeta\",\n" +
+            "    \"args\": {\n" +
+            "      \"lawsuit\": \"%@_1\"\n" +
+            "    },\n" +
+            "    \"thought\": \"Extract metadata from the lawsuit.\"\n" +
+            "  }\n" +
+            "]\n");
       }
 
       if (source.equals(lawGetMeta.getSource())) {
         return new LLMResponse.Success(
-          """
-              {
-              "verdict": "Unknown",
-              "plaintiff": "families of victims of Sandy Hook Elementary School shooting",
-              "defendant": "Alex Jones",
-              "judgeOptions": ["reduce personal expenses to a reasonable level", "bar from further waste of estate assets", "appoint a trustee to oversee spending", "dismiss the bankruptcy case"]
-            }
-            """.trim());
+          ("  {\n" +
+           "  \"verdict\": \"Unknown\",\n" +
+           "  \"plaintiff\": \"families of victims of Sandy Hook Elementary School shooting\",\n" +
+           "  \"defendant\": \"Alex Jones\",\n" +
+           "  \"judgeOptions\": [\"reduce personal expenses to a reasonable level\", \"bar from further waste of estate assets\", \"appoint a trustee to oversee spending\", \"dismiss the bankruptcy case\"]\n" +
+           "}\n").trim());
       }
       return new LLMResponse.Success("");
     }));
 
     FlappyBaseAgent lawAgent = new FlappyBaseAgent(
-      dummy, List.of(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
+      dummy, Arrays.asList(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
     );
 
     Future<LawMetaReturn> returnFuture = lawAgent.executePlanAsync(LAW_EXECUTE_PLAN_PROMPT);
